tdf#165564 RTF:Fix export and import of footnotes/endnotes

Removes additional spaces in export and wrong insertions of custom
footnote/endnote symbols in import.

Change-Id: I2e79e87a5b644b116a87602332e09cde89b64ba5
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/184978
Reviewed-by: Gabor Kelemen <gabor.kelemen.extern@allotropia.de>
Tested-by: Jenkins
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188431
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>