sw/source/filter/ww8/docxattributeoutput.hxx
@@ -232,7 +232,7 @@ public:
     virtual void StartRunProperties() override;
 
     /// Called after we end outputting the attributes.
-    virtual void EndRunProperties( const SwRedlineData* pRedlineData ) override;
+    virtual bool EndRunProperties( const SwRedlineData* pRedlineData ) override;
 
     virtual bool FootnoteEndnoteRefTag() override;
 
